topgun gap fix

--- a/src/components/PortfolioTopgunContent/PortfolioTopgunContent.module.scss
+++ b/src/components/PortfolioTopgunContent/PortfolioTopgunContent.module.scss
@@ -6,6 +6,18 @@
   justify-content: start;
   gap: 120px;
 
+  @media (max-width: 1600px) {
+    gap: 100px;
+  }
+
+  @media (max-width: 1440px) {
+    gap: 60px;
+  }
+
+  @media (max-width: 1000px) {
+    gap: 40px;
+  }
+
   img {
     width: 100%;
     height: auto;
